--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,8 +33,14 @@ h1 {
     font-weight: bold;
 }
 
-button {
+#button1 {
     font-size: 1.5em;
+    margin-right: 10px;
+    border-radius: 10px;
+}
+
+#button2 {
+    font-size: 1em;
     margin-right: 10px;
     border-radius: 10px;
 }
@@ -68,4 +74,9 @@ td {
 td {
     padding: 5px;
     font-weight: bold;
+}
+
+#img{
+    height: 200px;
+    width: 200px;
 }
